<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/SettingsCategoryNotifications" >
        <SwitchPreferenceCompat
            android:background="@color/red"
            app:key="notifications"
            app:title="Enable Notifications"
            app:summary="Activate it to receive notifications when we receive earthquake data."/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/SettingsCategoryMaps">
        <ListPreference
            app:key="MapsType"
            app:entries="@array/MapsTypeEntries"
            app:entryValues="@array/MapsTypeEntries"
            app:persistent="false"
            android:defaultValue="2"
            app:title="Select Maps Type"/>

        <CheckBoxPreference
            app:key="FaultLines"
            app:title="Fault Lines"
            app:summary="Show fault lines?"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/SettingsCategoryFilter">
        <com.elifoksas.earthquake.ui.preference.DecimalSeekBarPreference
            android:defaultValue="10"
            app:key="MinimumEarthquakeMagnitude"
            app:minDecimalValue="1.0"
            app:maxDecimalValue="10.0"
            app:decimalStep="0.1"
            app:title="Minimum Magnitude"
            app:updatesContinuously="true" />

        <Preference
            app:key="feedback"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/SettingsCategoryOther">
        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Enable message notifications"/>

        <Preference
            app:key="feedback"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features"/>
    </PreferenceCategory>
</PreferenceScreen>
