<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="20dp"
    android:paddingTop="16dp"
    android:paddingEnd="20dp"
    tools:context=".ui.fragment.InformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/earthquake_detail_icon_button_background"
            android:contentDescription="@string/information_back"
            android:padding="10dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="@string/information_title"
            android:textColor="@color/earthquake_text_primary"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="@id/backButton" />

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:includeFontPadding="false"
            android:text="@string/information_subtitle"
            android:textColor="@color/earthquake_text_secondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toBottomOf="@id/titleText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/summaryCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/whistle_card_background"
        android:minHeight="96dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerContainer">

        <FrameLayout
            android:id="@+id/summaryIconContainer"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:background="@drawable/whistle_status_icon_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/inf_zero" />
        </FrameLayout>

        <TextView
            android:id="@+id/summaryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:includeFontPadding="false"
            android:text="@string/information_summary_title"
            android:textColor="@color/earthquake_text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/summaryDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/summaryIconContainer"
            app:layout_constraintTop_toTopOf="@id/summaryIconContainer"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/summaryDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:includeFontPadding="false"
            android:text="@string/information_summary_description"
            android:textColor="@color/earthquake_text_secondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/summaryIconContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/summaryIconContainer"
            app:layout_constraintTop_toBottomOf="@id/summaryTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryCard"
        tools:itemCount="4"
        tools:listitem="@layout/information_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
